--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src"
+    "build": "tsup src -d public"
   },
   "keywords": [],
   "author": "",
