--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
     "target": "ES2020",
     "module": "CommonJS",
     "esModuleInterop": true,
-    "strict": true,
-    "outDir": "dist"
+    "strict": true
   },
   "include": ["src"]
 }
